--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.data_bar_v2">
    <application
-        android:label="data_bar_v2"
+        android:label="DataBear"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
